--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,15 +8,20 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write  # npm provenance
+      contents: read
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
           node-version: 20
           registry-url: 'https://registry.npmjs.org'
-      - run: npm ci --workspaces=false
-      - run: npm ci --prefix packages/core
-      - run: npm run build --workspace @consentify/core
-      - run: npm publish --workspace @consentify/core --access public
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 9
+      - run: pnpm -r install
+      - run: pnpm -r build
+      - run: pnpm -r --filter @consentify/core publish --access public --provenance
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
