--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
     "name": "consentify",
     "private": true,
-    "version": "0.1.0",
-    "description": "Consentify monorepo: headless cookie consent SDK and adapters",
-    "workspaces": [
-        "packages/*"
-    ],
-    "packageManager": "pnpm@9",
+    "license": "MIT",
     "scripts": {
-        "build": "pnpm -w --filter @consentify/core build",
-        "build:all": "pnpm -r build",
-        "clean": "pnpm -r exec rimraf dist",
-        "lint": "echo 'no lint configured'",
-        "release": "pnpm build:all && echo 'Tag and publish from CI'"
-    }
+        "build": "pnpm -r build",
+        "changeset": "changeset",
+        "version-packages": "changeset version",
+        "release": "changeset publish"
+    },
+    "devDependencies": {
+        "@changesets/cli": "2.27.7",
+        "typescript": "5.6.3"
+    },
+    "packageManager": "pnpm@9.12.0"
 }
