--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -3,8 +3,7 @@
         "target": "ES2019",
         "module": "ESNext",
         "lib": ["ES2020", "DOM"],
-        "declaration": true,
-        "outDir": "dist",
+        "noEmit": true,
         "strict": true,
         "skipLibCheck": true,
     },
