--- a/packages/core/tsconfig.build.json
+++ b/packages/core/tsconfig.build.json
@@ -4,11 +4,6 @@
     "outDir": "dist",
     "declaration": true,
     "emitDeclarationOnly": false,
-    "module": "ESNext",
-    "target": "ES2020",
-    "moduleResolution": "Bundler",
-    "strict": true,
-    "skipLibCheck": true
-  },
-  "include": ["src"]
+    "noEmit": false
+  }
 }
