--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,11 +1,12 @@
 {
     "compilerOptions": {
-        "target": "ES2019",
+        "target": "ES2022",
         "module": "ESNext",
-        "lib": ["ES2020", "DOM"],
+        "lib": ["ES2022", "DOM"],
+        "moduleResolution": "node",
         "noEmit": true,
         "strict": true,
-        "skipLibCheck": true,
+        "skipLibCheck": true
     },
-    "include": ["src"],
+    "include": ["src"]
 }
