--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,6 @@ jobs:
       - uses: pnpm/action-setup@v4
       - run: pnpm -r install
       - run: pnpm -r build
-      - run: pnpm -r --filter @consentify/core publish --access public --provenance
+      - run: pnpm -r --filter @consentify/core publish --access public --provenance --no-git-checks
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
